# python-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
python_utils/: __init__.py  archives.py  basic_io.py  clear_hidden.py  imports.py  iterables.py  timer.py
tests/: test_archives.py  test_basic_io.py  test_clear_hidden.py  test_imports.py  test_iterables.py  test_timer.py
