[project]
name = "python_utils"
authors = [
    {name = "Adam Pirog"},
    {email = "pirog.adam@gmail.com"},
]
description = "Various Python utilities."
readme = "README.md"
license = { text="MIT" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [

    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "pylint"
    ]

[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["python_utils*"]

[tool.setuptools.dynamic]
version = {attr = "python_utils.version.__version__"}

[project.scripts]
clear-hidden = "python_utils.clear_hidden:cli"
python-archive = "python_utils.archives:cli"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
